# wasm-game

./: Cargo.toml  README.md  package.json
src/: lib.rs
web/: index.html  package-lock.json  package.json
web/src/: main.ts
